Slight modification of the Added ConfigureInfra Jobs Workflow structure.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,4 +56,5 @@ workflows:
       #- say-hello
       - InfraCreation
       - ConfigureInfra:
-          requires: InfraCreation
+          - requires:
+              - InfraCreation
