--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,5 +56,5 @@ workflows:
       #- say-hello
       - InfraCreation
       - ConfigureInfra:
-          - requires:
-              - InfraCreation
+          requires:
+            - InfraCreation
