Adding Ansible Inventory population step to InfraCreation.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,15 @@ jobs:
               --template-file create_ec2.yml \
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-west-2
-  
+      
+      - run:
+          name: Populate Inventory
+          command: |
+             aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:Project,Values=udacity" \
+              --output text >> inventory
+ 
   ConfigureInfra:
     docker:
       - image: python:3.7-alpine3.11
@@ -44,14 +52,6 @@ jobs:
           command: |
             apk add --update ansible
      
-      - run:
-          name: List Created EC2 instances and save the IPAddress to inventory file. 
-          command: |
-            aws ec2 describe-instances \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:Project,Values=udacity" \
-              --output text >> inventory
-
       - run:
           name: Configure EC2 Instance
           command: |
