--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,11 @@ jobs:
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:Project,Values=udacity" \
               --output text >> inventory
+      
+      - persist_to_workspace:
+          root: /tmp/workshare
+          paths:
+            - inventory
  
   ConfigureInfra:
     docker:
@@ -52,10 +57,13 @@ jobs:
           command: |
             apk add --update ansible
      
+      - attach_workspace:
+          at: /tmp/workshare
+     
       - run:
           name: Configure EC2 Instance
           command: |
-            ansible-playbook -i inventory main-remote.yml 
+            ansible-playbook -i /tmp/workshare/inventory main-remote.yml 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
