--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,12 +62,12 @@ jobs:
             apk add --update ansible
      
       - attach_workspace:
-          at: /tmp
+          at: /tmp/workshare
      
       - run:
           name: Configure EC2 Instance
           command: |
-            ansible-playbook -i /tmp/inventory main-remote.yml 
+            ansible-playbook -i /tmp/workshare/inventory main-remote.yml 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
