Slight modification to workspace root path. Take4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,8 @@ jobs:
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:Project,Values=udacity" \
               --output text >> inventory
-          
+      - run:
+          name: Output inventory file contents    
           command: |
             cat inventory
       
