--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
             yum install -y tar gzip 
             mkdir /tmp/workshare
       - persist_to_workspace:
-          root: ./
+          root: /
           paths:
             - /tmp/workshare
  
