--- a/create_ec2.yml
+++ b/create_ec2.yml
@@ -22,4 +22,9 @@ Resources:
           FromPort: '22'
           ToPort: '22'
           CidrIp: 0.0.0.0/0 
-
+  Tags:
+    -
+      Key: Project
+      Value: Udacity
+      Key: Appplication
+      Value: Linux Server
