--- a/create_ec2.yml
+++ b/create_ec2.yml
@@ -23,8 +23,5 @@ Resources:
           ToPort: '22'
           CidrIp: 0.0.0.0/0 
   Tags:
-    -
-      Key: Project
+    - Key: Project
       Value: Udacity
-      Key: Appplication
-      Value: Linux Server
