--- a/create_ec2.yml
+++ b/create_ec2.yml
@@ -11,7 +11,8 @@ Resources:
       KeyName: udacity
       # Change this, as applicable to you
       # You may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
-      ImageId: ami-074251216af698218
+      #ImageId: ami-074251216af698218
+      ImageId: ami-0ee8244746ec5d6d4
       InstanceType: t2.micro
 
       Tags:
