--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,9 +110,9 @@ jobs:
             # Test if website exists
             if curl -s --head ${URL} 
             then
-              return 0
+              echo 0
             else
-              return 1
+              echo 1
             fi
 
 # Invoke jobs via workflows
