--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
 
       - run: return 1
 
-      - destroy_environment:
+      - destroy_environment
           when: on_fail
 
       - run:
@@ -133,7 +133,7 @@ jobs:
               echo 1
             fi
        
-      - destroy_environment:
+      - destroy_environment
           when: on_fail
 
 # Invoke jobs via workflows
