--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,12 @@ commands:
           # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
           # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
 
+          when: on_fail
+
           command: |
             echo ${CIRCLE_WORKFLOW_ID:0:5} && \
             aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
+
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
@@ -62,10 +65,10 @@ jobs:
               --filters "Name=tag:Project,Values=Udacity" \
               --output text >> /tmp/workshare/inventory
 
-      - run: return 1
+      # Uncomment the following to Deliberately fail it for testing
+      #- run: return 1
 
       - destroy_environment
-        when: on_fail
 
       - run:
           name: Output inventory file contents    
@@ -134,7 +137,6 @@ jobs:
             fi
        
       - destroy_environment
-        when: on_fail
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
