Correcting Smoke Test dependency to become dependent on Infra config not creation.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,4 +150,4 @@ workflows:
             - InfraCreation
       - smoke_test:
           requires:
-            - InfraCreation
+            - ConfigureInfra
