--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,9 +131,9 @@ jobs:
             # Test if website exists
             if curl -s --head ${URL} 
             then
-              echo 0
+              exit 0
             else
-              echo 1
+              exit 1 
             fi
        
       - destroy_environment
