--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,7 +192,7 @@ jobs:
             --parameter-overrides PipelineID="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
 
   # Destroy the previous production version's S3 bucket and CloudFormation stack. 
-  clean_up_old_frontend:
+  cleanup_old_frontend:
     docker:
       - image: amazon/aws-cli
     steps:
