--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,11 +150,11 @@ jobs:
           name: Execute bucket.yml - Create Cloudformation Stack
           command: |
             aws cloudformation deploy \
-            --template-file ./S3Bucket/bucket.yml \
+            --template-file S3Bucket/bucket.yml \
             --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
             --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
       # Uncomment the step below if you wish to upload all contents of the [ S3Sync_updated ] directory to the S3 bucket
-      - run: aws s3 sync ./S3Bucket/S3Sync_updated s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
+      - run: aws s3 sync S3Bucket/S3Sync_updated s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
 
   # Fetch and save the pipeline ID (bucket ID) responsible for the last release.
   get_last_deployment_id:
@@ -168,7 +168,8 @@ jobs:
           command: |
             aws cloudformation \
             list-exports --query "Exports[?Name==\`PipelineID\`].Value" \
-            --no-paginate --output text > ~/PipelineID.txt
+            --no-paginate --output text > ~/PipelineID.txt \
+            && cat ~/PipelineID.txt
       - persist_to_workspace:
           root: ~/
           paths:
@@ -185,7 +186,7 @@ jobs:
       - run:
           name: Execute cloudfront.yml
           command: |
-            aws cloudfront create-invalidation --distribution-id distribution_ID --paths "/*" && \
+            #aws cloudfront create-invalidation --distribution-id distribution_ID --paths "/*" && \
             aws cloudformation deploy \
             --template-file S3Bucket/cloudfront.yml \
             --stack-name production-distro \
@@ -205,6 +206,7 @@ jobs:
           # Use $OldBucketID environment variable or mybucket644752792305 below.
           # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
           command: |
+            cat ~/PipelineID.txt && \
             export OldBucketID=$(cat ~/PipelineID.txt)
             aws s3 rm "s3://${OldBucketID}" --recursive
 
