Retesting promotion to prod after S3bucket job isolation and appending missing colon to workflow name/title.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,7 +224,7 @@ workflows:
       #    requires:
       #      - ConfigureInfra
   
-  static-page-S3-workflow
+  static-page-S3-workflow:
     jobs:
       - create_and_deploy_frontend
       - promote_to_production:
